Fixed scroll issue on mobile

--- a/sass/4-modules/_work.scss
+++ b/sass/4-modules/_work.scss
@@ -157,8 +157,7 @@
 
 @media(max-width: 599px) {
     .work__project {
-        margin-bottom: 3em;
-
+        margin-bottom: 5.5em;
         &__info {
 
             &__name {
